--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
         <artifactId>gson</artifactId>
         <version>2.9.0</version>
     </dependency>
+
+     <dependency>
+      <groupId>com.google.cloud</groupId>
+      <artifactId>google-cloud-datastore</artifactId>
+      <version>1.104.0</version>
+    </dependency>
   </dependencies>
 
   <build>
